--- a/html/address.html
+++ b/html/address.html
@@ -19,7 +19,10 @@
         <div class="addressItem">
           <div class="addressItemTop">
             <div class="addressItemTopLeft">EOTC官网</div>
-            <div class="addressItemTopRight bule"><a href="http://EOTC.IM">EOTC.IM</a></div>
+            <div class="addressItemTopRight bule"><a href="http://EOTC.IM">EOTC.IM</a>
+              /
+              <a href="http://EOTC.IME">EOTC.IME</a>
+            </div>
           </div>
           <div class="addressItemList">
 
