--- a/html/guide/guide-staking.html
+++ b/html/guide/guide-staking.html
@@ -70,7 +70,7 @@
 
     <div id="bottom">
       <div class="bottom">
-        <div class="bottomLeft"><a href="../../index.html">eotc.im</a></div>
+        <div class="bottomLeft"><a href="../../index.html">eotc 官网</a></div>
         <div class="bottomRight">
           <div class="">简体中文</div>
           <div class=""><img src="../../img/down.png"></div>
