--- a/html/address.html
+++ b/html/address.html
@@ -21,7 +21,7 @@
             <div class="addressItemTopLeft">EOTC官网</div>
             <div class="addressItemTopRight bule"><a href="http://EOTC.IM">EOTC.IM</a>
               /
-              <a href="http://EOTC.IME">EOTC.IME</a>
+              <a href="https://EOTC.ME">EOTC.ME</a>
             </div>
           </div>
           <div class="addressItemList">
