--- a/html/guide/guide.html
+++ b/html/guide/guide.html
@@ -112,6 +112,10 @@
                   <div class="contentItemImg"><img src="../../img/guide/guide-didcheck.png" width="100%"></div>
                   <div class="contentItemText">DID体系如何审核</div>
                 </div>
+                <div class="contentItem" onclick="goDetail(0101007)">
+                  <div class="contentItemImg"><img src="../../img/guide/guide-funding.png" width="100%"></div>
+                  <div class="contentItemText">如何获取资金流水截图</div>
+                </div>
               </div>
             </div>
             <div class="productCenterContent">
@@ -168,7 +172,7 @@
 
     <div id="bottom">
       <div class="bottom">
-        <div class="bottomLeft"><a href="../../index.html">eotc 官网</a></div>
+        <div class="bottomLeft"><a href="../../index.html">EOTC 官网</a></div>
         <div class="bottomRight">
           <div class="">简体中文</div>
           <div class=""><img src="../../img/down.png"></div>
