--- a/html/guide/identityAuthentication.html
+++ b/html/guide/identityAuthentication.html
@@ -61,7 +61,7 @@
     <div id="bottom">
       <div class="bottom">
         <div class="bottomLeft">
-          <a href="../../index.html">eotc 官网</a>
+          <a href="../../index.html">EOTC 官网</a>
         </div>
         <div class="bottomRight">
           <div class="">简体中文</div>
