--- a/html/guide/guide.html
+++ b/html/guide/guide.html
@@ -113,8 +113,16 @@
                   <div class="contentItemText">DID体系如何审核</div>
                 </div>
                 <div class="contentItem" onclick="goDetail(0101007)">
-                  <div class="contentItemImg"><img src="../../img/guide/guide-funding.png" width="100%"></div>
-                  <div class="contentItemText">如何获取资金流水截图</div>
+                  <div class="contentItemImg"><img src="../../img/guide/guide-bankCard.png" width="100%"></div>
+                  <div class="contentItemText">如何获取资金流水截图<br>【银行卡】</div>
+                </div>
+                <div class="contentItem" onclick="goDetail(0101008)">
+                  <div class="contentItemImg"><img src="../../img/guide/guide-WeChat.png" width="100%"></div>
+                  <div class="contentItemText">如何获取资金流水截图<br>【微信】</div>
+                </div>
+                <div class="contentItem" onclick="goDetail(0101009)">
+                  <div class="contentItemImg"><img src="../../img/guide/guide-Alipay.png" width="100%"></div>
+                  <div class="contentItemText">如何获取资金流水截图<br>【支付宝】</div>
                 </div>
               </div>
             </div>
