--- a/html/address.html
+++ b/html/address.html
@@ -44,7 +44,7 @@
             </div>
             <div class="addressNameItem">
               <div class="addressItemTitle">去中心化币币交易所</div>
-              <div class="addressItemContent"><a href="http://SWAP.EOTC.IM">SWAP.EOTC.IM</a></div>
+              <div class="addressItemContent"><a href="https://swap.eotc.im/">SWAP.EOTC.IM</a></div>
             </div>
             <div class="addressNameItem">
               <div class="addressItemTitle">去中心化借贷交易所</div>
