--- a/html/guide/guide.html
+++ b/html/guide/guide.html
@@ -154,6 +154,10 @@
             </div>
             <div class="productCenterContent">
               <div class="contentList">
+                <div class="contentItem" onclick="goDetail(0103000)">
+                  <div class="contentItemImg"><img src="../../img/DID/00.png" width="100%"></div>
+                  <div class="contentItemText">新用户怎么注册DID</div>
+                </div>
                 <div class="contentItem" onclick="goDetail(0103001)">
                   <div class="contentItemImg"><img src="../../img/DID/home-1.png" width="100%"></div>
                   <div class="contentItemText">如何完善社区信息</div>
